hphp/test/quick/refcount-static.php.expectf

Fatal error: $this is null in %s/test/quick/refcount-static.php on line 6
